fix: remove featured project overlay on mobile

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -353,4 +353,8 @@
 	.grid {
 		grid-template-columns: repeat(1, 1fr);
 	}
+
+	.overlay {
+		opacity: 0;
+	}
 }
